<resources>
    <!-- home screen -->
    <string name="app_name">Quadratic Solver Application</string>
    <string name="solver">Quadratic Solver</string>
    <string name="tutorial">Quadratic Tutorial</string>
    <string name="quiz">Quadratic Quiz</string>
    <string name="title">Quadratic Equation application</string>

    <!-- solver screen -->
    <string name="title_activity_solver">Solver</string>
    <string name="xSquared">x^2 +</string>
    <string name="X">x +</string>
    <string name="equalsZero">= 0</string>
    <string name="solverInformation">Enter values for a, b and c:</string>
    <string name="solveButton">Solve</string>
    <string name="xEquals">X =</string>
    <string name="solution">s</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>

    <!-- quiz activity -->
    <string name="quizInformation">Solve the equation:</string>
    <string name="correct">Correct!</string>
    <string name="incorrect">Incorrect</string>

    <!-- quiz equation contents -->
    <string name="aValue">A</string>
    <string name="bValue">B</string>
    <string name="cValue">C</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="xValue">x</string>
    <string name="squared">x^2</string>


    <!-- quiz fragment -->
    <string name="fragmentSolutionChoice">How many solutions are there?</string>
    <string name="twoSolutionInformation">Enter two values:</string>
    <string name="noSolution">No Solution</string>
    <string name="oneSolution">One Solution</string>
    <string name="twoSolutions">Two Solutions</string>
    <string name="next">Next Equation</string>
    <string name="backButton">Back</string>






    <!--version-->
    <string name="versionNo">prototype: build v1</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_quiz">QuizActivity</string>

    <string name="hello_world">Hello world!</string>


</resources>
