<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Solver"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#FFEFD5">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/solverInformation"
            android:layout_gravity="center" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20sp">

            <!-- input widgets + formula layout -->

            <EditText
                android:id="@+id/a_value"
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:hint="@string/a"
                android:textSize="30sp" />
            <TextView
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:text="@string/xSquared"
                android:textSize="20sp" />


            <EditText
                android:id="@+id/b_value"
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:hint="@string/b"
                android:textSize="30sp" />
            <TextView
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:text="@string/X"
                android:textSize="20sp" />


            <EditText
                android:id="@+id/c_value"
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:hint="@string/c"
                android:textSize="30sp" />
            <TextView
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:text="@string/equalsZero"
                android:textSize="20sp"/>


        </LinearLayout>

        <Button
            android:id="@+id/SolveEquationButton"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:text="@string/solveButton" />

    </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20sp">

            <TextView
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:text="@string/xEquals"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/SolutionTextView"
                android:layout_width="70sp"
                android:layout_height="50sp"
                android:hint="@string/solution"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/SolutionTextView2"
                android:layout_width="70sp"
                android:layout_height="50sp"
                android:hint="@string/solution"
                android:textSize="20sp" />


        </LinearLayout>


</LinearLayout>