<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#9ACD32">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:text="@string/fragmentSolutionChoice"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <Button
                android:id="@+id/NoSolutionButton"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:text="@string/noSolution"/>
            <Button
                android:id="@+id/OneSolutionButton"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:text="@string/oneSolution"/>
            <Button
                android:id="@+id/TwoSolutionButton"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:text="@string/twoSolutions"/>

        </LinearLayout>

        <Button
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/next"/>

    </LinearLayout>

</LinearLayout>
