<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizActivity"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/quizInformation"
            android:layout_gravity="center" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20sp">

            <!-- input widgets + formula layout -->

            <TextView
                android:id="@+id/Question"
                android:layout_width="wrap_content"
                android:layout_height="50sp"
                android:hint="@string/q1"
                android:textSize="30sp" />


        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:text="@string/xEquals"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/SolutionTextView"
            android:layout_width="70sp"
            android:layout_height="50sp"
            android:hint="@string/solution"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/SolutionTextView2"
            android:layout_width="70sp"
            android:layout_height="50sp"
            android:hint="@string/solution"
            android:textSize="20sp" />


    </LinearLayout>

    <Button
        android:id="@+id/SolveEquationButton"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:text="@string/solveButton" />



</LinearLayout>